feat: cleanup example files
