# internal/infra/transport/rest/endpoint/v1/handler.go
@@ -2,7 +2,6 @@ package v1
 
 import (
 	docs "github.com/charmingruby/push/docs"
-	"github.com/charmingruby/push/internal/domain/example/example_usecase"
 	"github.com/charmingruby/push/internal/domain/notification/notification_usecase"
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
@@ -11,19 +10,16 @@ import (
 
 func NewHandler(
 	router *gin.Engine,
-	exampleService example_usecase.ExampleServiceContract,
 	notificationService notification_usecase.NotificationServiceUseCase,
 ) *Handler {
 	return &Handler{
 		router:              router,
-		exampleService:      exampleService,
 		notificationService: notificationService,
 	}
 }
 
 type Handler struct {
 	router              *gin.Engine
-	exampleService      example_usecase.ExampleServiceContract
 	notificationService notification_usecase.NotificationServiceUseCase
 }
 
@@ -33,8 +29,6 @@ func (h *Handler) Register() {
 	docs.SwaggerInfo.BasePath = basePath
 	{
 		v1.GET("/welcome", welcomeEndpoint)
-		v1.POST("/examples", h.createExampleEndpoint)
-		v1.GET("/examples/:id", h.getExampleEndpoint)
 
 		v1.POST("/communication-channels", h.createCommunicationChannelEndpoint)
 		v1.POST("/notifications", h.scheduleNotificationEndpoint)
